Sorting out alignment issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,9 +10,15 @@
     position: relative;
     overflow: hidden;
     height: 300px;
-    width: 1350px;
 }
 
+a.brand-logo {
+    font-family: 'Playfair Display', serif;
+}
+
+a {
+    font-family: 'Playfair Display', serif;
+}
 .btn-small {
     margin: 5px;
 }
@@ -30,8 +36,11 @@ nav ul a {
     padding-right: 25px;
 }
 .nav-wrapper {
-    padding-left: 20px; 
+    padding-left: 5em;
+    padding-right: 3em;
+    font-size: 18px; 
 }
+
 .dropdown-content li>a {
     font-size: 16px;
     color: #26a69a;
@@ -41,6 +50,15 @@ nav ul a {
     text-shadow: none;
 }
 
+p {
+    font-family: 'Playfair Display', serif;
+    font-size: 20px;
+    margin-left: 150px;
+}
+
+.p1 {
+    font-weight: 400px;
+}
 .card .card-action a {
     color: #e0e0e0; 
     margin-right: 24px;
@@ -57,6 +75,10 @@ nav ul a {
     color: white;
 }
 
+.card.horizontal {
+    width: 1100px;
+    margin-left: 100px;
+}
 .multi-line-user-input p{
     white-space: pre-line;
 }
@@ -66,4 +88,39 @@ nav ul a {
     padding-right: 0px;
     margin-left: 0px;
     width: 285px;
+}
+
+.container {
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 100%;
+}
+
+h2 {
+    padding-left: 2.5em;
+    font-family: 'Playfair Display', serif;
+}
+
+h3 {
+    font-family: 'Playfair Display', serif;
+}
+h5 {
+    margin-left: 50px;
+}
+
+.grey-text.text-lighten-4 {
+    color: #f5f5f5 !important;
+    margin-left: 25px;
+    font-family: 'Playfair Display', serif;
+}
+
+.grey-text.text-lighten-3 {
+    color: #eee !important;
+    margin-left: 90px;
+    font-family: 'Playfair Display', serif;
+}
+
+col .s12 {
+    width: 1130px;
+    margin-left: 100px;
 }
